# etcu-esp32

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  partitions.csv  platformio.ini  sdkconfig.defaults
components/ecu/: CMakeLists.txt
components/ecu/src/: BaseElectronicControlUnit.cpp  ElectronicControlUnit.cpp  HondaECU.cpp  KLineNetworkConnector.cpp  UartNetworkConnector.cpp  UartProtocol.cpp  utils.cpp  utils.hpp
main/: Accelerator.cpp  Accelerator.hpp  CMakeLists.txt  Controller.cpp  Controller.hpp  Drv8825.cpp  Drv8825.hpp  ElectronicControlUnit.cpp  ElectronicControlUnit.hpp  EtcController.cpp  EtcController.hpp  Formatter.cpp  Formatter.hpp  Kconfig.projbuild  Limiter.cpp  ModeButton.cpp  ModeButton.hpp  MotorController.cpp  MotorController.hpp  MotorDriver.cpp  MotorDriver.hpp  Scaler.cpp  Scaler.hpp  Scaller.cpp  Scaller.hpp  SetupButton.cpp  SetupButton.hpp  app_main.cpp  idf_component.yml  main.cpp
main/ECU/: HondaECU.cpp  HondaECU.hpp  KLineNetworkConnector.cpp  exception.hpp
main/ECU/Interface/: NetworkConnector.hpp  UartNetworkConnector.hpp
main/accelerator/: Accelerator.cpp  Accelerator.hpp  Formatter.hpp  Scaler.hpp
main/ble/: blecsc_sens.hpp  gatt_svr.cpp
main/bluetooth/: ThrottlePositionCharacteristic.cpp  ThrottlePositionCharacteristic.hpp
main/include/: AS5600.hpp  App.hpp  Bluetooth.hpp  Configuration.hpp  Controller.hpp  EventType.hpp  ExternalPower.hpp  HECU.hpp  HourMeter.hpp  Indicator.hpp  ModeButton.hpp  PidController.hpp  Pump.hpp  Switch.hpp  Throttle.hpp  Timer.hpp  TwistPosition.hpp  TwistPositionSensor.hpp  Updater.hpp  WheelSensor.hpp  ble_gap.hpp  ble_utils.hpp  blehr_sens.hpp
main/include/bluetooth/: Bluetooth.hpp  Identificator.hpp
main/include/configuration/: Configuration.hpp
main/include/controller/: Controller.hpp  ControllerBase.hpp
main/include/motor/: AS5600.hpp  Motor.hpp
main/include/sensor/: SensorBase.hpp  Throttle.hpp  TwistPosition.hpp  TwistPositionSensor.hpp
main/include/switch/: BreakSwitch.hpp  ClutchSwitch.hpp  GuardSwitch.hpp  ModeSwitch.hpp
main/indicator/: BlinkIndicator.hpp  ErrorCodeIndicator.hpp  Indicator.hpp
main/node/: AcceleratorNode.cpp  AcceleratorNode.hpp  ControllerNode.cpp  ControllerNode.hpp  EcuNode.cpp  EcuNode.hpp  MotorNode.cpp  MotorNode.hpp  SetupButtonNode.cpp  SetupButtonNode.hpp
main/src/: AS5600.cpp  App.cpp  Bluetooth.cpp  Configuration.cpp  Controller.cpp  ExternalPower.cpp  HECU.cpp  HourMeter.cpp  Indicator.cpp  ModeButton.cpp  Pump.cpp  Switch.cpp  Throttle.cpp  Timer.cpp  TwistPosition.cpp  TwistPositionSensor.cpp  Updater.cpp  WheelSensor.cpp  gap_svr.cpp  gatt_svr.cpp
main/src/bluetooth/: Bluetooth.cpp  ConfigurationCharacteristicCallback.cpp  ConfigurationCharacteristicCallback.hpp  ServerCallback.cpp  ServerCallback.hpp
main/src/configuration/: Configuration.cpp  Configuration.hpp
main/src/controller/: Controller.cpp  ControllerBase.cpp
main/src/motor/: AS5600.cpp  Motor.cpp
main/src/sensor/: SensorBase.cpp  Throttle.cpp  TwistPosition.cpp  TwistPositionSensor.cpp
main/stepper/: Limiter.hpp  MotorController.cpp  MotorController.hpp  MotorDriver.cpp  MotorDriver.hpp
(+111 files in other folders)
